  files or script file
- Add support for the data files from Davidson & MacKinnon,
  Econometric Theory and Methods (ETM)
- Make the NIST linear regression test suite available as a
  plugin
- Add ARMA model to the variable menu (plus "arma" command)
- Fix bugs with displaying a TSLS model in the GUI program
- Fix bug in display of actual, fitted and residuals in GUI
  program

12/14/2003 version 1.2.0
- add "rename" command (rename a variable)
- add "printf" command for generating formatted output
- "delete" command: add the ability to delete specified
  variables, identified by name or number
- add "eval" command: syntax as in a "genr" formula; the
  result of calculation (or retrieval) is printed then
  discarded, not added to the data set as with genr
- Replace the internal workings of "genr" so that it can
  calculate dynamically (e.g. "genr y = .6*y(-1) + u"),
  which in effect makes the "sim" command redundant
- Make principal components analysis available via the GUI
- Improve formatting of descriptive statistics output when
  only one variable is selected
- Allow adding of "influence" values (calculated by the
  "leverage" test) to the data set in the GUI program 
- When adding a variable to the dataset from a model window,
  give the user a chance to edit the name and description
- Windows: add option to emulate Windows look (via WIMP)
- add "--no-restore-data" to R invocation
- Fix for launching R from gretl on Windows XP
- Improve creation of time-series datasets for use in R
- Fix problems created by tabs in the command line
- Two-stage least squares: add list of instruments to printout
  of model results; fix crashing bug in printing covariance
  matrix of coefficient estimates
- Improve the mechanism for detecting the presence of a lagged
  dependent variable in a regression list; also show the
  Durbin-Watson stat in addition to Durbin's h when a 
  regression includes a lagged dependent variable
- Fix bug in graph editing for non-English locales