@@ -22,8 +22,6 @@
 #ifndef GRETL_INTERNAL_H
 #define GRETL_INTERNAL_H
 
-#define PMAX_NOT_AVAILABLE     666
-
 int laggenr (int parent, int lag, int opt, double ***pZ, 
 	     DATAINFO *pdinfo);
 
