@@ -76,7 +76,8 @@
 # define M_PI 3.14159265358979323846
 #endif
 
-#define LISTSEP 999
+#define LISTSEP            999
+#define PMAX_NOT_AVAILABLE 666
 
 /* numbers smaller than the given limit will print as zero */
 #define screen_zero(x)  ((fabs(x) > 1.0e-13)? x : 0.0)
